# DetDoc

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  skills-lock.json  tailwind.config.js  tsconfig.ui.json  vite.config.ts
.claude/skills/: sosumi
src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/detdoc/: agent.rs  artifacts.rs  config.rs  docs.rs  error.rs  events.rs  flow.rs  git.rs  manifest.rs  mod.rs  paths.rs  pi_rpc.rs  plan.rs  validation.rs  worktree.rs
src-tauri/tests/: config_tests.rs  fixtures.rs  flow_fake_agent_tests.rs  git_worktree_tests.rs  pi_rpc_tests.rs  plan_tests.rs
src-ui/: styles.css
src-ui/app/: App.tsx  types.ts
src-ui/components/: DetDocPanel.tsx  DocEditor.tsx  DocsExplorer.tsx  PatchReview.tsx  PlanReview.tsx  ProjectShell.tsx  RunsView.tsx  SettingsView.tsx
src-ui/lib/: tauri.ts
src/cli/: main.ts  output.ts  progress.ts
src/core/: approval.ts  artifacts.ts  config.ts  diff.ts  errors.ts  flow.ts  git.ts  hash.ts  manifest.ts  paths.ts  plan.ts  validation.ts  worktree.ts
swift/DetDocApp/: .gitignore  Project.swift  Tuist.swift  project.yml
tests/: apply-command-progress.test.ts  apply-replay.test.ts  approval.test.ts  artifacts.test.ts  cli-skeleton.test.ts  config-init.test.ts  diff.test.ts  flow-run.test.ts  git-policy.test.ts  pi-runner-prompt.test.ts  pi-runner-smoke.test.ts  plan.test.ts  run-command-options.test.ts  run-progress.test.ts  validation.test.ts  worktree.test.ts
(+250 files in other folders)
