[package]
name = "detdoc_gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "detdoc_gui"
path = "src/lib.rs"

[[bin]]
name = "detdoc_gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
globset = "0.4"
hex = "0.4"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time", "io-util"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
